--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "axios": "^1.7.2",
+    "jest": "^29.3.1",
     "mongoose": "^6.0.5"
   }
 }
