--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
+    "axios": "^1.7.2",
+    "jest": "^29.3.1",
     "mongoose-unique-validator": "^3.0.0"
   }
 }
