--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "axios": "^1.7.2",
     "jest": "^29.3.1",
+    "express-rate-limit": "^7.3.1",
     "mongoose": "^6.0.5"
   }
 }
