--- a/product-service/package.json
+++ b/product-service/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
     "axios": "^1.7.2",
+    "redis": "^4.6.5",
     "jest": "^29.3.1",
     "mongoose-unique-validator": "^3.0.0"
   }
